# Core_Framework_Backend

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
doc/: API_Documentation.md  API_Documentation.openapi.yaml  Database_Guide.md  Error_Handling_Guide.md  Flow_Diagrams.md  LEGAL_COMPLIANCE_REVIEW.md  core_user_system_scope.md
migrations/: 0001_init.sql  0002_mfa_policy_descriptions.sql  0003_login_invites_password_policy.sql  0004_admin_invites_roles.sql  0005_username_policy_role_deletion.sql  0006_active_username_uniqueness.sql  0007_fix_username_indexes.sql  0008_admin_permission_scopes_setup.sql
scripts/: api-regression-tests.ps1
src/: auth.rs  config.rs  error.rs  lib.rs  main.rs  request_context.rs  utils.rs
src/api/: admin.rs  auth_routes.rs  contracts.rs  files.rs  internal.rs  mod.rs  privacy.rs  users.rs
src/services/: admin.rs  auth.rs  files.rs  mod.rs  privacy.rs  shared.rs  user.rs
