[package]
name = "core_framework_backend"
version = "0.1.0"
edition = "2021"
default-run = "core_framework_backend"

[features]
default = []
maintenance = []

[[bin]]
name = "maintenance"
path = "src/bin/maintenance.rs"
required-features = ["maintenance"]

[dependencies]
argon2 = "0.5"
async-trait = "0.1"
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22"
bytes = "1"
chrono = { version = "0.4", features = ["clock", "serde"] }
data-encoding = "2.6"
dotenvy = "0.15"
futures = "0.3"
hex = "0.4"
hmac = "0.12"
http = "1"
jsonwebtoken = "9"
qrcode = "0.14"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json", "migrate"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "parsing"] }
tokio = { version = "1", features = ["full"] }
tower-cookies = "0.11"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1", features = ["serde", "v4"] }
